--- a/03_ WeatherWebsite/Style.css
+++ b/03_ WeatherWebsite/Style.css
@@ -1,108 +1,152 @@
-
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-body{
-    background-color: #222;
-}
-.container{
-    width: 90%;
-    max-width: 470px;
-    background: linear-gradient(135deg , #00feba , #5b548a);
-    color: #fff;
-    margin: 100px auto 0;
-    width: min;
-    padding: 40px 35px;
-    text-align: center;
-    border-radius: 20px;
-}
-.searchBox{
-    display: flex;
-    width: 100%;
-    align-items: center;
-    justify-content: space-between;
-
-}
-.searchBox input{
-    border: 0;
-    outline: 0;
-    background: #ebfffc ;
-    color: #555;
-    padding: 10px 25px;
-    height: 60px;
-    border-radius: 30px;
-    flex: 1;
-    margin-right: 16px;
-    font-size: 18px;
-}
-.searchBox button{
-    border: 0;
-    outline: 0;
-    background: #ebfffc ;
-    border-radius: 50%;
-    width: 60px;
-    height: 60px;
-    cursor: pointer;
-}
-.searchBox button img{
-    width: 16px;
-
-}
-#error{
-    text-align: left;
-    margin-left:10px ;
-    font-size: 15px;
-    margin-top: 10px;
+body {
+  background-color: #222;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  padding: 20px;
 }
 
-#error p{
-    font-size : larger;
-    margin-top: 20px;
-    color: red;
+.container {
+  width: 90%;
+  max-width: 470px;
+  background: linear-gradient(135deg, #00feba, #5b548a);
+  color: #fff;
+  padding: 40px 35px;
+  text-align: center;
+  border-radius: 20px;
 }
 
-.hidden{
-    display: none;
+.searchBox {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+  gap: 10px;
 }
-.weather-icon{
-    width: 170px;
-    margin-top: 30px;
+
+.searchBox input {
+  border: 0;
+  outline: 0;
+  background: #ebfffc;
+  color: #555;
+  padding: 10px 25px;
+  height: 60px;
+  border-radius: 10px;
+  width: 100%;
+  font-size: 18px;
+}
+
+.searchBox button {
+  border: 0;
+  outline: 0;
+  background: #ebfffc;
+  border-radius: 10px;
+  width: 100%;
+  height: 50px;
+  cursor: pointer;
+}
+
+.searchBox button img {
+  width: 16px;
+}
+
+#error {
+  text-align: left;
+  margin-left: 10px;
+  font-size: 15px;
+  margin-top: 10px;
+}
+
+#error p {
+  font-size: larger;
+  margin-top: 20px;
+  color: red;
+}
+
+.hidden {
+  display: none;
+}
+
+.weather-icon {
+  width: 170px;
+  margin-top: 30px;
 }
 
 .weather h1 {
-    font-size: 70px;
-    font-weight: 500;
+  font-size: 70px;
+  font-weight: 500;
 }
+
 .weather h2 {
-    font-size: 40px;
-    font-weight: 500;
-    margin-top: -10px;
+  font-size: 40px;
+  font-weight: 500;
+  margin-top: -10px;
 }
 
-.details{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 50px;
-    padding: 0 20px;
+.details {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 50px;
+  padding: 0 20px;
 }
 
-.cols{
-    display: flex;
-    text-align: left;
-    align-items: center;
+.cols {
+  display: flex;
+  text-align: left;
+  align-items: center;
 }
 
-.cols img{
-    width: 40px;
-    margin-right: 10px; 
+.cols img {
+  width: 40px;
+  margin-right: 10px;
 }
 
-.humidity , .wind{
-    font-size: 28px;
-    margin-top: -6px;
+.humidity,
+.wind {
+  font-size: 28px;
+  margin-top: -6px;
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+  .container {
+    padding: 30px;
+    width: 100%;
+  }
+
+  .searchBox input {
+    font-size: 16px;
+    height: 50px;
+  }
+
+  .searchBox button {
+    width: 100%;
+    height: 50px;
+  }
+
+  .weather h1 {
+    font-size: 50px;
+  }
+
+  .weather h2 {
+    font-size: 30px;
+  }
+
+  .details {
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .humidity,
+  .wind {
+    font-size: 24px;
+  }
 }
