--- a/06_ Guess The Number/style.css
+++ b/06_ Guess The Number/style.css
@@ -3,19 +3,19 @@ html {
   }
   
   body {
-    width: 300px;
+    width: 100%;
     max-width: 100%;
-    min-width: 480px;
-    margin: 0 auto;
+    min-width: 320px;
+    margin: 0;
     background-color: #212121;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
   }
   
-  .lastResult {
-    color: white;
-    padding: 7px;
-  }
-  
-  .guesses {
+  .lastResult, .guesses {
     color: white;
     padding: 7px;
   }
@@ -23,33 +23,35 @@ html {
   .hidden {
     display: none;
   }
+  
   button {
     background-color: #141414;
     color: #fff;
-    width: 250px;
+    width: 100%;
+    max-width: 250px;
     height: 50px;
     border-radius: 25px;
     font-size: 30px;
     border-style: none;
     margin-top: 30px;
-    /* margin-left: 50px; */
   }
   
   #subt {
     background-color: #161616;
     color: #ffffff;
-    width: 200px;
+    width: 100%;
+    max-width: 200px;
     height: 50px;
     border-radius: 10px;
     font-size: 20px;
     border-style: none;
     margin-top: 20px;
-    /* margin-left: 75px; */
   }
   
   #guessField {
     color: #000;
-    width: 250px;
+    width: 100%;
+    max-width: 250px;
     height: 40px;
     font-size: 25px;
     border-style: none;
@@ -60,36 +62,42 @@ html {
   
   #guess {
     font-size: 55px;
-    /* margin-left: 90px; */
     margin-top: 60px;
     color: #fff;
   }
-
   
   .guesses {
     background-color: #7a7a7a;
   }
   
-  .form{
+  .form {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    align-items: center;
   }
+  
   #wrapper {
     box-sizing: border-box;
     text-align: center;
-    width: 550px;
-    height: 100%;
+    width: 90%;
+    max-width: 550px;
+    height: auto;
     background-color: #474747;
     color: #fff;
     font-size: 25px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
   
   h1 {
     background-color: #161616;
-  
     color: #fff;
     text-align: center;
+    padding: 10px;
   }
   
   p {
@@ -97,8 +105,32 @@ html {
     text-align: center;
   }
 
-  #newGame{
+  #newGame {
     background-color: blue;
     margin-bottom: 10px;
   }
-  
+
+  /* Responsive Design */
+  @media (max-width: 768px) {
+    #wrapper {
+      width: 100%;
+      padding: 15px;
+    }
+
+    #guess {
+      font-size: 30px;
+    }
+
+    h1 {
+      font-size: 20px;
+    }
+
+    p {
+      font-size: 14px;
+    }
+
+    button, #subt, #guessField {
+      font-size: 18px;
+      height: 45px;
+    }
+  }
