--- a/10_Quote Generator/style.css
+++ b/10_Quote Generator/style.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap');
 
-
 * {
   margin: 0;
   padding: 0;
@@ -12,23 +11,27 @@
   --dark-theme: #1d272e;
   --light-theme: #b1d9f5;
 }
+
 body {
   background-color: var(--dark-theme);
   color: var(--light-theme);
   width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  padding: 20px;
 }
 
 .quote-box {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   max-width: 700px;
   width: 90%;
   box-shadow: 2px 0px 16px 10px #6c7e3d;
   text-align: center;
   padding: 30px;
+  border-radius: 10px;
 }
+
 .quote-box h2 {
   font-size: 2rem;
   margin-bottom: 30px;
@@ -51,18 +54,18 @@ blockquote {
   font-size: 2rem;
 }
 
-blockquote::after , blockquote::before{
+blockquote::after, blockquote::before {
   content: '"';
 }
 
-.quote-box span{
+.quote-box span {
   display: block;
   float: right;
   margin-top: 10px;
   position: relative;
 }
 
-.quote-box span::before{
+.quote-box span::before {
   content: '';
   width: 20px;
   height: 2px;
@@ -72,33 +75,53 @@ blockquote::after , blockquote::before{
   left: -40%;
 }
 
-.links{
+.links {
   display: flex;
   width: 100%;
   margin-top: 50px;
   justify-content: center;
-  column-gap: 30px;
+  column-gap: 20px;
+  flex-wrap: wrap;
 }
 
-button{
-  padding: 10px 25px;
+button {
+  padding: 10px 20px;
   border-radius: 20px;
   cursor: pointer;
   font-weight: bold;
   font-size: small;
+  transition: all 0.3s ease-in-out;
 }
-#new-quote{
-background-color: rgb(24, 204, 204);
+
+#new-quote {
+  background-color: rgb(24, 204, 204);
 }
+
 button i {
   margin-right: 5px;
   font-size: 15px;
 }
-a{
+
+a {
   list-style: none;
   text-decoration: none;
   color: black;
 }
 
-
-
+/* Responsive Design */
+@media (max-width: 600px) {
+  .quote-box {
+    padding: 20px;
+  }
+  blockquote {
+    font-size: 1.5rem;
+  }
+  .links {
+    flex-direction: column;
+    row-gap: 10px;
+  }
+  button {
+    padding: 8px 15px;
+    font-size: smaller;
+  }
+}
