--- a/11_MovieMap/Style2.css
+++ b/11_MovieMap/Style2.css
@@ -1,137 +1,132 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Nosifer&display=swap");
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-body{
-
-    background: rgb(91,13,132);
-    background: linear-gradient(150deg, rgba(91,13,132,1) 0%, rgba(22,6,25,1) 20%, rgba(22,6,25,1) 80%, rgba(91,13,132,1) 100%);
-    height: 100vh;
-    width: 100vw;
-    overflow: hidden;
-
+body {
+  background-image: url("./Blue\ White\ One\ Photo\ Night\ Sky\ Desktop\ Wallpaper.png");
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
 }
 
 /* Nav Bar */
-#nav-container{
-    display: flex;
-    align-items: center;
-    padding: 20px;
-    font-family: "Nosifer", sans-serif;
-    /* justify-content: center; */
+#nav-container {
+  display: flex;
+  align-items: center;
+  padding: 20px;
+  font-family: "Nosifer", sans-serif;
+  /* justify-content: center; */
 }
-.logo-name{
-    margin-left: 20px;
-    font-size: 1.3rem;
-    text-decoration: none;
-
+.logo-name {
+  margin-left: 20px;
+  font-size: 1.3rem;
+  text-decoration: none;
 }
 
 .navbar {
-    background-color: transparent; /* Makes background transparent */
- 
-  }
-  .navbar a {
-    color:  yellow;
-  }
+  background-color: transparent; /* Makes background transparent */
+}
+.navbar a {
+  color: yellow;
+}
 
+/* Image Section */
+.movie {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(1, 800px);
+  gap: 50px;
+  justify-items: start;
+  align-items: start;
+}
 
-  /* Image Section */
-  .movie{
+.movie-info {
+  background-color: transparent;
+  font-family: "Nosifer", sans-serif;
+  color: #eaff00;
+}
+
+.img-section {
+  justify-self: center;
+  margin-left: 50px;
+  margin-top: 40px;
+  /* img-section */
+  box-shadow: 2px 4px 30px 5px #e7ff35;
+}
+
+.movie-info {
+  display: grid;
+  grid-template-rows: repeat(6, 1fr);
+  gap: 30px 20px;
+  padding: 20px;
+  height: 500px;
+  width: 700px;
+}
+
+.movie-overview {
+  grid-row: span 4;
+}
+
+.movie-context {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  font-size: large;
+  justify-content: center;
+  background-color: transparent;
+  box-shadow: 2px 4px 10px 1px #e7ff35;
+  word-spacing: 5px;
+  font-size: smaller;
+}
+
+.movie-context h3 {
+  font-weight: 100;
+  /* font-family: Arial, Helvetica, sans-serif; */
+}
+
+.release-year {
+  font-size: medium;
+  font-weight: 500;
+  display: flex;
+  padding: 20px;
+  align-items: center;
+  box-shadow: 2px 4px 10px 1px #e7ff35;
+  word-spacing: 1rem;
+}
+.movie-overview {
+  font-size: medium;
+  font-weight: 500;
+  padding: 20px;
+  box-shadow: 2px 4px 10px 1px #e7ff35;
+}
+
+.movie-overview p {
+  font-size: 1rem;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.img-section img {
+  width: 360px;
+  height: 360px;
+}
+
+@media (max-width: 650px) {
+  .movie {
     display: grid;
-    grid-template-columns: repeat(2 , 1fr);
-    grid-template-rows: repeat(1 , 800px);
-    gap:50px;
-    justify-items: start;
-    align-items: start;
-    
-  }
-
-  .movie-info{
-    background-color: transparent;
-    font-family: "Nosifer", sans-serif;
-    color: #eaff00;
-  }
-
-  .img-section{
-    justify-self: center;
-    margin-left: 50px;
-    margin-top: 40px;
-    /* img-section */
-    box-shadow: 2px 4px 30px 5px #E7FF35;
-  }
-
-  .movie-info{
-    display: grid;
-    grid-template-rows: repeat(6, 1fr);
-    gap: 30px 20px;
-    padding: 20px;
-    height: 500px;
-    width: 700px;
-  }
-
-  .movie-overview{
-    grid-row: span 4;
-  }
-
-  .movie-context{
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-    font-size: large;    
-    justify-content: center;
-    background-color: transparent;
-    box-shadow: 2px 4px 10px 1px #E7FF35;
-    word-spacing: 5px;
-    font-size: smaller;
-  }
-  
-  
-
-  .movie-context h3{
-    font-weight: 100;
-    /* font-family: Arial, Helvetica, sans-serif; */
-
-  }
-
-  .release-year{
-    font-size: medium;
-    font-weight: 500;
-    display: flex;
-    padding: 20px;
-    align-items: center;
-    box-shadow: 2px 4px 10px 1px #E7FF35;
-    word-spacing: 1rem;
-  }
-  .movie-overview{
-    font-size: medium;
-    font-weight: 500;
-    padding: 20px;
-    box-shadow: 2px 4px 10px 1px #E7FF35;
-  }
-  
-  .movie-overview p {
-    font-size: 1rem;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-
-  .img-section img{
-    width: 360px;
-    height: 360px;
-  }
-
-
-
-  @media (max-width: 650px) {
-    .movie{
-    display: grid;
-    grid-template-columns: repeat(1 , 1fr);
-    grid-template-rows: repeat(2 , 1fr);
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     justify-items: center;
     align-items: center;
-    }
   }
+  .movie-overview p {
+    font-size: 1.2rem; /* Increase text size */
+  }
+}
+
+
